# r2d2

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  circle.yml
.circleci/: config.yml
src/: config.rs  event.rs  extensions.rs  lib.rs  sync.rs  task.rs  test.rs  thunk.rs
src/async_/: config.rs  mod.rs  test.rs
tests/: config.rs  test.rs
