[package]
name = "r2d2"
version = "0.8.3"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A generic connection pool"
documentation = "https://docs.rs/r2d2"
repository = "https://github.com/sfackler/r2d2"
readme = "README.md"
keywords = ["database", "pool"]

[dependencies]
antidote = "1.0"
log = "0.4"
scheduled-thread-pool = "0.2"
