[package]
name = "r2d2"
version = "0.8.10"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A generic connection pool"
repository = "https://github.com/sfackler/r2d2"
readme = "README.md"
keywords = ["database", "pool"]
edition = "2018"

[dependencies]
log = "0.4"
parking_lot = "0.12"
scheduled-thread-pool = "0.2"
